ocp/stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: "mongo"
#  annotations:
#    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: "mongo"
  selector:
    app: "mongo"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      imagePullSecrets:
      - name: docker-secret
      terminationGracePeriodSeconds: 10
      volumes:
      - name: mongo-ca
        secret:
          secretName: mongo-ca
      - name: mongo-keyfile-secret
        secret:
          secretName: mongo-keyfile-secret
      containers:
      - name: mongo
        image: ${DOCKER_IMAGE}
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /var/lib/mongodb/data
        - name: mongo-ca
          mountPath: "/stuff/"
          readOnly: true
        - name: mongo-keyfile-secret
          mountPath: "/stuff/keyfile"
          readOnly: true
        readinessProbe:
          exec:
            command:
              - stat
              - /tmp/initialized
          initialDelaySeconds: 60
          periodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: elm-storage
    annotations:
      volume.beta.kubernetes.io/storage-class: "mongodbsc"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "mongodbsc"
      resources:
        requests:
          storage: 10Gi
