ocp/stateful-elm.yaml
apiVersion: v1
kind: Service
metadata:
  name: "ccm"
#  annotations:
#    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  ports:
    - port: 9443
      targetPort: 9443
      protocol: TCP
      name: "ccm"
  selector:
    app: "ccm"
---
apiVersion: v1
kind: Route
metadata:
  name: ccm
spec:
  to:
    kind: Service
    name: ccm
  port:
    targetPort: ccm
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ccm
spec:
  selector:
    matchLabels:
      app: ccm
  serviceName: "ccm"
  replicas: 1
  template:
    metadata:
      labels:
        app: ccm
    spec:
      terminationGracePeriodSeconds: 10
      volumes:
       - name: secret-volume
         secret:
           secretName: elm-crt-secret
       - name: response
         configMap:
           name: response
       - name: ccm
         configMap:
           name: ccm
      containers:
      - name: ccm
        image:  >-
            image-registry.openshift-image-registry.svc:5000/elm/elm@sha256:5c858503391017063389cec4ad9415a976f6dc5c8bd7daeeba4419191f7b807a
        terminationGracePeriodSeconds: 120
        lifecycle:
          preStop:
            exec:
              # SIGTERM triggers a quick exit; gracefully terminate instead
              command: ['sh', '-c', "/opt/IBM/JazzTeamServer/server/server.shutdown"]
          postStart:
            exec:
              # start command after container init
              command: ['sh', '-c', "/opt/IBM/JazzTeamServer/server/server.startup"]
        ports:
        - containerPort: 9443
        volumeMounts:
        - name: storage-ccm
          mountPath: /opt/IBM/JazzTeamServer/server/liberty/servers/
        - name: conf-ccm
          mountPath: "/opt/IBM/JazzTeamServer/server/conf"
        - name: response
          mountPath: "/opt/IBM/JazzTeamServer/setup"
        - name: repotools-ccm
          mountPath: "/opt/IBM/JazzTeamServer/repotools"
        - name: logs-ccm
          mountPath: "/opt/IBM/JazzTeamServer/server/logs"
        - name: ccm
          mountPath: "/opt/IBM/JazzTeamServer/server/liberty/servers/clm/conf/application.xml"
          subPath: "application.xml"
  volumeClaimTemplates:
  - metadata:
      name: storage-ccm
    annotations:
      volume.beta.kubernetes.io/storage-class: "mongodbsc"
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "mongodbsc"
      resources:
        requests:
          storage: 15Gi
  - metadata:
      name: conf-ccm
    annotations:
      volume.beta.kubernetes.io/storage-class: "mongodbsc"
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "mongodbsc"
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: repotools-ccm
    annotations:
      volume.beta.kubernetes.io/storage-class: "mongodbsc"
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "mongodbsc"
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: logs-ccm
    annotations:
      volume.beta.kubernetes.io/storage-class: "mongodbsc"
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "mongodbsc"
      resources:
        requests:
          storage: 1Gi
